# ModalEditor

./: .gitignore  CMakeLists.txt  dummy_text.txt  main.cpp
include/: CursorController.h  Editor.h  EditorMode.cpp  EditorMode.h  EditorView.h  TerminalManagement.h  TextDocument.h
src/: CursorController.cpp  Editor.cpp  EditorMode.cpp  EditorView.cpp  TerminalManagement.cpp  TextDocument.cpp
